--- a/scanner.html
+++ b/scanner.html
@@ -20,7 +20,11 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-        navigator.mediaDevices.getUserMedia({ video: true })
+        navigator.mediaDevices.getUserMedia({
+          video: {
+            facingMode: 'environment' // Use the rear camera
+          }
+        })
           .then(function(stream) {
             var video = document.getElementById('scanner');
             video.srcObject = stream;
