--- a/scanner.html
+++ b/scanner.html
@@ -28,7 +28,7 @@
                     constraints: {
                         width: 640,
                         height: 480,
-                        facingMode: 'environment' // or 'user' for front camera
+                        facingMode: 'user' // Use 'user' for front camera
                     },
                 },
                 decoder: {
@@ -72,3 +72,4 @@
     </script>
 </body>
 </html>
+In this code, 
